--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "expo-build-properties": "^0.12.5",
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
     "expo": "^53.0.0",
