--- a/package.json
+++ b/package.json
@@ -50,5 +50,15 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-chart-kit"
+        ],
+        "listUnknownPackages": false
+      }
+    }
   }
 }
